@@ -104,5 +104,14 @@
         <li>Number Three</li>
     </ol>
 
+    <h1 class="h1">H1 One</h1>
+    <h1 class="h1">H1 Two</h1>
+    <h1 class="h1">H1 Three</h1>
+
+    <h2 class="h2">H2 One</h2>
+    <h2 class="h2">H2 Two</h2>
+    <h2 class="h2">H2 Three</h2>
+    
+
   </body>
 </html>
