@@ -17,6 +17,7 @@
   * Added #list_item_elements to ElementLocators
   * Added #unordered_list_elements to ElementLocators
   * Added #ordered_list_elements to ElementLocators
+  * Added #h1_elements to ElementLocators
   * Added #navigate_to to PageFactory to navigate to a page through previous pages
   * Added #continue_navigation_to to PageFactory which begins at @current_page
   * Added routes to PageFactory to collect routes through the site
